project template deels ingevuld, paar datasets gedownload

--- a/project_template.ipynb
+++ b/project_template.ipynb
@@ -7,8 +7,10 @@
     "# Project Group - \n",
     "\n",
     "Members: \n",
+    "Fos van der Meer\n",
     "\n",
-    "Student numbers: "
+    "Student numbers: \n",
+    "4866436"
    ]
   },
   {
@@ -23,7 +25,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "What effect does the price of fuels have on the mode of transport on land? We will compare data of fuel prices in the Netherlands, truck transport, and train transport."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Author 1**:\n",
+    "**Author 1**: Fos van der Meer: Coding, data analysis\n",
     "\n",
     "**Author 2**:\n",
     "\n",
@@ -55,7 +59,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Fuel prices:\n",
+    "https://data.overheid.nl/dataset/532-pompprijzen-motorbrandstoffen--brandstofsoort--per-dag#panel-description\n",
+    "\n",
+    "Rail transport:\n",
+    "https://data.overheid.nl/dataset/1184-spoorvervoer--ladinggewicht--ladingtonkilometer--treinkilometers\n",
+    "\n",
+    "Road transport:\n",
+    "https://data.overheid.nl/dataset/1187-wegvervoer--kerncijfers-per-bedrijfstak#panel-description\n"
+   ]
   },
   {
    "cell_type": "markdown",
