--- a/project_template.ipynb
+++ b/project_template.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What effect does the price of fuels have on the mode of transport on land? We will compare data of fuel prices in the Netherlands, truck transport, and train transport."
+    "What effect does the price of fuels have on the mode of transport on land? We will compare data of fuel prices in the Netherlands, road (truck) transport, and rail (train) transport."
    ]
   },
   {
@@ -67,7 +67,7 @@
     "https://data.overheid.nl/dataset/1184-spoorvervoer--ladinggewicht--ladingtonkilometer--treinkilometers\n",
     "\n",
     "Road transport:\n",
-    "https://data.overheid.nl/dataset/1187-wegvervoer--kerncijfers-per-bedrijfstak#panel-description\n"
+    "https://data.overheid.nl/dataset/1186-wegvervoer--kerncijfers#panel-description\n"
    ]
   },
   {
@@ -80,7 +80,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Change dates to number format.\n",
+    "Match sample frequency (quarterly). This is optional.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
