namen en studiebummers toegevoegd

--- a/project_template.ipynb
+++ b/project_template.ipynb
@@ -7,10 +7,9 @@
     "# Project Group - \n",
     "\n",
     "Members: \n",
-    "Fos van der Meer\n",
-    "\n",
-    "Student numbers: \n",
-    "4866436"
+    "Fos van der Meer 4866436\n",
+    "Thijn Schoonderbeek 6090133\n",
+    "Jim van Erp, 5083540"
    ]
   },
   {
@@ -41,12 +40,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Author 1**: Fos van der Meer: Coding, data analysis\n",
     "\n",
-    "**Author 2**:\n",
+    "**Author 2**: Thijn Schoonderbeek: background research & visualisation\n",
     "\n",
-    "**Author 3**:"
+    "**Author 3**: Jim van Erp: Conceptualization & data preparation"
    ]
   },
   {
