--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -196,7 +196,8 @@
     "fuel[[\"Benzine\"]][:10]\n",
     "\n",
     "fuel[\"Jaar\"] = [int(datum[:4]) for datum in fuel[\"Perioden\"]]\n",
-    "fuel.head()\n"
+    "fuel.head()\n",
+    "#hallo\n"
    ]
   }
  ],
