maand split ding toegevoegd

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "4  2006 donderdag 5 januari   1.347  1.021  0.550"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -124,8 +124,9 @@
        "      <th>Benzine</th>\n",
        "      <th>Diesel</th>\n",
        "      <th>LPG</th>\n",
-       "      <th>dateindex</th>\n",
        "      <th>Jaar</th>\n",
+       "      <th>Maand</th>\n",
+       "      <th>Maand index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -136,7 +137,8 @@
        "      <td>1.003</td>\n",
        "      <td>0.543</td>\n",
        "      <td>2006</td>\n",
-       "      <td>2006</td>\n",
+       "      <td>januari</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -145,7 +147,8 @@
        "      <td>1.007</td>\n",
        "      <td>0.542</td>\n",
        "      <td>2006</td>\n",
-       "      <td>2006</td>\n",
+       "      <td>januari</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -154,7 +157,8 @@
        "      <td>1.007</td>\n",
        "      <td>0.540</td>\n",
        "      <td>2006</td>\n",
-       "      <td>2006</td>\n",
+       "      <td>januari</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -163,7 +167,8 @@
        "      <td>1.020</td>\n",
        "      <td>0.550</td>\n",
        "      <td>2006</td>\n",
-       "      <td>2006</td>\n",
+       "      <td>januari</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -172,22 +177,23 @@
        "      <td>1.021</td>\n",
        "      <td>0.550</td>\n",
        "      <td>2006</td>\n",
-       "      <td>2006</td>\n",
+       "      <td>januari</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Perioden Benzine Diesel    LPG  dateindex  Jaar\n",
-       "0     2006 zondag 1 januari   1.325  1.003  0.543       2006  2006\n",
-       "1    2006 maandag 2 januari   1.328  1.007  0.542       2006  2006\n",
-       "2    2006 dinsdag 3 januari   1.332  1.007  0.540       2006  2006\n",
-       "3   2006 woensdag 4 januari   1.348  1.020  0.550       2006  2006\n",
-       "4  2006 donderdag 5 januari   1.347  1.021  0.550       2006  2006"
+       "                   Perioden Benzine Diesel    LPG  Jaar    Maand  Maand index\n",
+       "0     2006 zondag 1 januari   1.325  1.003  0.543  2006  januari          1.0\n",
+       "1    2006 maandag 2 januari   1.328  1.007  0.542  2006  januari          1.0\n",
+       "2    2006 dinsdag 3 januari   1.332  1.007  0.540  2006  januari          1.0\n",
+       "3   2006 woensdag 4 januari   1.348  1.020  0.550  2006  januari          1.0\n",
+       "4  2006 donderdag 5 januari   1.347  1.021  0.550  2006  januari          1.0"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,9 +202,123 @@
     "fuel[[\"Benzine\"]][:10]\n",
     "\n",
     "fuel[\"Jaar\"] = [int(datum[:4]) for datum in fuel[\"Perioden\"]]\n",
+    "dates = [date.split(sep= \" \") for date in fuel[\"Perioden\"]]\n",
+    "fuel[\"Maand\"] = [date[-1] for date in dates]\n",
     "fuel.head()\n",
-    "#hallo\n"
+    "\n",
+    "dct = {\"januari\": 1, \"februari\": 2, \"maart\": 3, \"april\": 4, \"mei\": 5, \"juni\": 6, \"juli\":7, \"augustus\": 8, \"september\":9, \"oktober\":10, \"november\":11, \"decemer\":12}\n",
+    "fuel[\"Maand index\"] = fuel[\"Maand\"].map(dct)\n",
+    "fuel.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Perioden</th>\n",
+       "      <th>Benzine</th>\n",
+       "      <th>Diesel</th>\n",
+       "      <th>LPG</th>\n",
+       "      <th>Jaar</th>\n",
+       "      <th>Maand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2006 zondag 1 januari</td>\n",
+       "      <td>1.325</td>\n",
+       "      <td>1.003</td>\n",
+       "      <td>0.543</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>januari</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2006 maandag 2 januari</td>\n",
+       "      <td>1.328</td>\n",
+       "      <td>1.007</td>\n",
+       "      <td>0.542</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>januari</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2006 dinsdag 3 januari</td>\n",
+       "      <td>1.332</td>\n",
+       "      <td>1.007</td>\n",
+       "      <td>0.540</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>januari</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2006 woensdag 4 januari</td>\n",
+       "      <td>1.348</td>\n",
+       "      <td>1.020</td>\n",
+       "      <td>0.550</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>januari</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2006 donderdag 5 januari</td>\n",
+       "      <td>1.347</td>\n",
+       "      <td>1.021</td>\n",
+       "      <td>0.550</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>januari</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Perioden Benzine Diesel    LPG  Jaar    Maand\n",
+       "0     2006 zondag 1 januari   1.325  1.003  0.543  2006  januari\n",
+       "1    2006 maandag 2 januari   1.328  1.007  0.542  2006  januari\n",
+       "2    2006 dinsdag 3 januari   1.332  1.007  0.540  2006  januari\n",
+       "3   2006 woensdag 4 januari   1.348  1.020  0.550  2006  januari\n",
+       "4  2006 donderdag 5 januari   1.347  1.021  0.550  2006  januari"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuel.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
