data preparations in ander mapje

--- a/project_template.ipynb
+++ b/project_template.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What effect does the price of fuels have on the mode of transport on land? We will compare data of fuel prices in the Netherlands, road (truck) transport, and rail (train) transport."
+    "Is there a correlation between fuel prices, freight transport by road, and freight transport by rail? We will compare data of fuel prices in the Netherlands, road (truck) transport, and rail (train) transport."
    ]
   },
   {
