pipeline en road preparation aangepast

--- a/project_template.ipynb
+++ b/project_template.ipynb
@@ -87,7 +87,8 @@
    "source": [
     "Change dates to number format.\n",
     "Match sample frequency (quarterly). This is optional.\n",
-    "\n"
+    "\n",
+    "We will only use transport routes starting or ending in the Netherlands. Rail companies will not alter their routes depending on Dutch fuel prices. If we only consider these types of route for rail, we should do the same for road transport.\n"
    ]
   }
  ],
