--- a/data_preparation_road.ipynb
+++ b/data_preparation_road.ipynb
@@ -26,7 +26,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "road = pd.read_csv(\"data/fuel.csv\", sep=\";\")[:-1]\n",
+    "road = pd.read_csv(\"data/fuel.csv\", sep=\";\")\n",
     "road = fuel.replace(',','.', regex = True)"
    ]
   },
