--- a/data_preparation_fuel.ipynb
+++ b/data_preparation_fuel.ipynb
@@ -217,7 +217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -231,9 +231,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+   "version": "3.11.4"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
