--- a/data_preparation_fuel.ipynb
+++ b/data_preparation_fuel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'fuel' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Fos van der Meer\\Documents\\Uni\\TIL\\TIL Programming\\Repository\\TIL6010-LabAssignments\\data_preparation_fuel.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Fos%20van%20der%20Meer/Documents/Uni/TIL/TIL%20Programming/Repository/TIL6010-LabAssignments/data_preparation_fuel.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dates \u001b[39m=\u001b[39m [date\u001b[39m.\u001b[39msplit(sep\u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfor\u001b[39;00m date \u001b[39min\u001b[39;00m fuel[\u001b[39m\"\u001b[39m\u001b[39mPerioden\u001b[39m\u001b[39m\"\u001b[39m]]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Fos%20van%20der%20Meer/Documents/Uni/TIL/TIL%20Programming/Repository/TIL6010-LabAssignments/data_preparation_fuel.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m fuel[\u001b[39m\"\u001b[39m\u001b[39mJaar\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m [date[\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m date \u001b[39min\u001b[39;00m dates]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Fos%20van%20der%20Meer/Documents/Uni/TIL/TIL%20Programming/Repository/TIL6010-LabAssignments/data_preparation_fuel.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m dct \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mjanuari\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m1\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mfebruari\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m2\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mmaart\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m3\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mapril\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m4\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mmei\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m5\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mjuni\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m6\u001b[39m,\\\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Fos%20van%20der%20Meer/Documents/Uni/TIL/TIL%20Programming/Repository/TIL6010-LabAssignments/data_preparation_fuel.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mjuli\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m7\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39maugustus\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m8\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mseptember\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m9\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39moktober\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m10\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mnovember\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m11\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mdecember\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m12\u001b[39m}\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'fuel' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any empty values:\n",
+      "Perioden    False\n",
+      "Benzine     False\n",
+      "Diesel      False\n",
+      "LPG         False\n",
+      "Jaar        False\n",
+      "Maand       False\n",
+      "Kwartaal    False\n",
+      "dtype: bool\n",
+      "                   Perioden  Benzine  Diesel    LPG  Jaar  Maand  Kwartaal\n",
+      "0     2006 zondag 1 januari    1.325   1.003  0.543  2006      1         1\n",
+      "1    2006 maandag 2 januari    1.328   1.007  0.542  2006      1         1\n",
+      "2    2006 dinsdag 3 januari    1.332   1.007  0.540  2006      1         1\n",
+      "3   2006 woensdag 4 januari    1.348   1.020  0.550  2006      1         1\n",
+      "4  2006 donderdag 5 januari    1.347   1.021  0.550  2006      1         1\n"
      ]
     }
    ],
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +90,7 @@
        "Name: Diesel, Length: 71, dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +205,7 @@
        "6483         4  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
