--- a/data_preparation_fuel.ipynb
+++ b/data_preparation_fuel.ipynb
@@ -57,9 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fuel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Fos van der Meer\\Documents\\Uni\\TIL\\TIL Programming\\Repository\\TIL6010-LabAssignments\\data_preparation_fuel.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Fos%20van%20der%20Meer/Documents/Uni/TIL/TIL%20Programming/Repository/TIL6010-LabAssignments/data_preparation_fuel.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m years2 \u001b[39m=\u001b[39m fuel\u001b[39m.\u001b[39mgroupby([\u001b[39m\"\u001b[39m\u001b[39mJaar\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mKwartaal\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Fos%20van%20der%20Meer/Documents/Uni/TIL/TIL%20Programming/Repository/TIL6010-LabAssignments/data_preparation_fuel.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m meandata \u001b[39m=\u001b[39m years2[\u001b[39m\"\u001b[39m\u001b[39mDiesel\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mmean()[:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m#remove last quarter since it is incomplete.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Fos%20van%20der%20Meer/Documents/Uni/TIL/TIL%20Programming/Repository/TIL6010-LabAssignments/data_preparation_fuel.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m meandata\u001b[39m.\u001b[39mplot()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'fuel' is not defined"
+     ]
+    }
+   ],
    "source": [
     "years2 = fuel.groupby([\"Jaar\", \"Kwartaal\"])\n",
     "meandata = years2[\"Diesel\"].mean()[:-1] #remove last quarter since it is incomplete.\n",
