test verwijderen naar normaal

--- a/project_template.ipynb
+++ b/project_template.ipynb
@@ -9,9 +9,7 @@
     "Members: \n",
     "Fos van der Meer 4866436\n",
     "Thijn Schoonderbeek 6090133\n",
-    "Jim van Erp, 5083540\n",
-    "\n",
-    "test"
+    "Jim van Erp, 5083540\n"
    ]
   },
   {
