--- a/Main file.ipynb
+++ b/Main file.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Thijn Schoonderbeek - 6090133\n",
     "Jim van Erp - 5083540\n",
-    "Fos van der Meer - \n",
+    "Fos van der Meer - 4866436\n",
     "\n",
     "Github: "
    ]
