--- a/Main file.ipynb
+++ b/Main file.ipynb
@@ -474,7 +474,9 @@
     "# 5 Discussion\n",
     "\n",
     "It would be interesting to see how the transport modes and fuel prices interact on a quarterly, monthly, or even daily basis. This is outside of the scope of this report, for which the data was not too easy to get by.\n",
-    "Furthermore, it would make sense to include other types of transport, such as cargo ships and planes."
+    "Furthermore, it would make sense to include other types of transport, such as cargo ships and planes.\n",
+    "\n",
+    "It can also be calculated more accurately, what the correlation value is, there may be some other type of regression, such as exponential or polynomial regression."
    ]
   }
  ],
